--- a/static/.htaccess
+++ b/static/.htaccess
@@ -16,22 +16,21 @@ RewriteRule ^(.*)$ https://%1/$1 [R=301,L]
 # RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 
 # Handle SvelteKit routing
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.*)$ /index.html [L]
+# RewriteCond %{REQUEST_FILENAME} !-f
+# RewriteCond %{REQUEST_FILENAME} !-d
+# RewriteRule ^(.*)$ /index.html [L]
+
+# Serve files if exist ###########################################
+# RewriteCond %{REQUEST_FILENAME} -f
+# RewriteRule ^(.*)$ - [L]
 
 # Set security headers
-<IfModule mod_headers.c>
-    Header set X-XSS-Protection "1; mode=block"
-    Header set X-Frame-Options "SAMEORIGIN"
-    Header set X-Content-Type-Options "nosniff"
-    Header set Referrer-Policy "strict-origin-when-cross-origin"
-</IfModule>
-
-# Enable GZIP compression
-<IfModule mod_deflate.c>
-    AddOutputFilterByType DEFLATE text/html text/plain text/xml text/css text/javascript application/javascript application/x-javascript application/json
-</IfModule>
+# <IfModule mod_headers.c>
+#     Header set X-XSS-Protection "1; mode=block"
+#     Header set X-Frame-Options "SAMEORIGIN"
+#     Header set X-Content-Type-Options "nosniff"
+#     Header set Referrer-Policy "strict-origin-when-cross-origin"
+# </IfModule>
 
 # Set browser caching
 # <IfModule mod_expires.c>
